--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/rwkama1/Banquet-company-rates"
   },
  
-  "keywords": ["js","javascript","calculation","banquets","company"],
+  "keywords": ["js","javascript","calculation","banquets","company","algorithm"],
   "author": "Carlos Rodriguez <rwkamandriw@gmail.com>",
   "license": "MIT"
 }
